# selectivesearch

./: LICENSE  README.md  setup.py
example/: demo.py
selectivesearch/: CMakeLists.txt  __init__.py  _selectivesearch.cpp  helpers.py  make.sh  selectivesearch.cpp  selectivesearch.hpp  selectivesearch.py
